# dsna

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: default.yaml  default_v2.yaml
docs/: architecture.md  architecture_v2.md  dsna_project_plan.md  environment.md
scripts/: train_phase1.py  train_phase2.py  train_v2.py
src/env/: multitask_wrapper.py
src/models/: __init__.py  ac_head.py  alpha_controller.py  base_encoder.py  dsna_model.py  dsna_model_v2.py  system1_pairwise.py  system2_workspace.py  task_mlp.py
tests/: test_modules.py
